# quiz

./: .gitignore  DOCS.md  Dockerfile  README.md  index.md  move_files.sh  pyproject.toml  quiz-prompt.md  test_integration.sh
.github/actions/checkout-branches/: action.yml
.github/workflows/: generate-svg.yml  integration-test.yml  markdown-to-svg.yml  pdf-generator-image.yml  publish-to-gh-pages.yml  qr-generator.yml  slack-notify.disabled  slack-notify.yml  svg-to-pdf-image.yml  svg-to-pdf.yml  test-svg-generator.yml  test-svg-to-pdf.yml  test-yaml-to-svg.yml  test.yml  yaml-to-markdown.yml  yaml-to-svg.yml
decks/: devops-hero.md
decks/devops-hero/: README.md  index.md  index.yaml
decks/fun-math/: README.md  README.yaml  index.md  index.yaml
decks/fun-math/cards/: 002.md  (+8 more)
decks/fun-math2/: index.md
decks/funmath/: 001.md  003.md  004.md  005.md  009.md  README.yaml  index.md
decks/italian-trap/: index.md  index.yaml
devops-hero/questions/: 003-answers.md
integration-test/questions/: test-question.md
iterations/1/: devops_cloud_quiz.md  devops_quiz_question.md
iterations/3/: 001-question.md
iterations/4/: 001-answers.md  002-answers.md
iterations/5/: 002-answers.md  003-question.md  004-answers.md  004-question.md  quiz-prompt-with-svg.md
iterations/6/: 001-question.md  002-answers.md  002-question.md  003-answers.md  004-answers.md  004-question.md
old/: devops_question.md  sample_output.md
old/5/: 001-answers.md  001-question.md
old/first iteration/: container_quiz.md  k8s_security_question.md
old/fourth iteration/: 002-question.md
old/second iteration/: 001-answers.md  001-question.md  002-answers.md  003-answers.md  003-question.md
prompts/: devops-hero.yaml  italian-trap.yaml
questions/: 002-question.md
questions/devops-hero/: 001-answers.md  001-question.md  002-question.md  004-answers.md  004-question.md
schemas/: answers.yaml  card.yaml  deck-index.yaml  deck-spec.yaml
scripts/: README.md  generate_qr_codes.sh  generate_svgs.sh  regenerate_qr_codes.sh  svg_to_pdf.sh  test_generate_svgs.sh  test_integration.sh  yaml_to_markdown.sh  yaml_to_svg.sh
src/: __init__.py
src/file_processor/: __init__.py
src/file_utils/: __init__.py
src/qr_generator/: __init__.py  __main__.py  generator.py
src/svg_generator/: __init__.py  generator.py
src/svg_to_pdf/: Dockerfile  __init__.py  converter.py  image_handler.py
src/yaml_to_markdown/: __init__.py  generate_markdown.py
src/yaml_to_svg/: __init__.py  generate_svg.py
svg-generator/: .coverage  README.md  coverage.xml  generator.py  pyproject.toml
svg-generator/tests/: __init__.py  conftest.py  test_generator.py
svg-to-pdf/: .coverage  Dockerfile  README.md  coverage.xml  pyproject.toml  test.sh
svg-to-pdf/svg_to_pdf/: __init__.py  converter.py  image_handler.py
svg-to-pdf/svg_to_pdf/converters/: __init__.py  base.py  cairo_converter.py  svglib_converter.py  system_converter.py  weasyprint_converter.py
svg-to-pdf/tests/: __init__.py  conftest.py  test_converter.py  test_converters.py  test_image_handler.py
tests/: test_generate_svgs.sh  test_qr_generator.py  test_svg_to_pdf.py  test_yaml_to_markdown.py  test_yaml_to_svg.py
(+219 files in other folders)
