[tool.poetry]
name = "quiz-test"
version = "0.1.0"
description = "Quiz SVG Generator"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "svg-generator" }
]

[tool.poetry.dependencies]
python = "^3.8"
svgwrite = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 